# Pehredaar

./: PREMORTEM.md  README.md  STRATEGY.md  commit_message.txt  main.py  pyproject.toml
fixtures/: README.md  deduction-scenarios.json
pehredaar/: BUILD-PLAN.md  SETUP.md  SPEC.md  main.py  pyproject.toml
pehredaar/fixtures/: rejection-samples.jsonl  rejection-taxonomy.md
pehredaar/src/channels/: receipt_card.py  whatsapp.py
pehredaar/src/citations/: MC2024_cashless.txt  MC2024_condonation.txt  MC2024_fraud.txt  MC2024_moratorium.txt  MC2024_nonpayable.txt  MC2024_proportionate.txt  PPI2017_claims.txt
pehredaar/src/claimback/: classify.py  draft_appeal.py  router.py
pehredaar/src/defender/: before_you_sign.py  policy_parser.py  proportionate_deduction.py
pehredaar/src/ingest/: bill_to_json.py  pii_redact.py
pehredaar/src/rules/: non_payable.py  non_payable_detector.py  nppa_cghs_rules.py  price_check_engine.py
pehredaar/tests/: test_end_to_end.py  test_integration.py  test_p3_deduction.py  test_p4_p6.py  test_p5_classifier.py
pehredaar/web/: app.js  index.html  styles.css
pehredaar_pkg/channels/: receipt_of_justice.py
pehredaar_pkg/citations/: clause_library.py
pehredaar_pkg/claimback/: classify.py  draft_appeal.py  router.py
pehredaar_pkg/core/: pii_redaction.py
pehredaar_pkg/defender/: before_you_sign.py
pehredaar_pkg/ingest/: bill_to_json.py
tests/: test_integration.py  test_p3_deduction.py  test_p4_p6.py  test_p5_classifier.py
