[project]
name = "pehredaar"
version = "1.0.0"
description = "A WhatsApp-first guardian that protects Indian patients' money at the discharge desk (proportionate deduction shield) and after claim rejection (IRDAI-grounded appeal generator)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.137.2",
    "pdfplumber>=0.11.10",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.2",
    "rapidfuzz>=3.14.5",
    "sqlite-utils>=3.39",
    "uvicorn>=0.49.0",
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[tool.mutmut]
source_paths = ["pehredaar_pkg/defender/proportionate_deduction.py"]
pytest_add_cli_args_test_selection = ["tests/test_p3_deduction.py"]
pytest_add_cli_args = ["-p", "no:cacheprovider"]