[project]
name = "pehredaar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all]>=0.137.2",
    "httpx>=0.28.1",
    "pdfplumber>=0.11.10",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.2",
    "rapidfuzz>=3.14.5",
    "sentence-transformers>=5.6.0",
    "sqlite-utils>=3.39",
    "uvicorn>=0.49.0",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
